# consultoria-vf2

./: .gitignore  Inicio.py  README.md  __init__.py  langgraph.json  pyproject.toml  requirements.txt  setup.py  setup.sh
graph/: graph.py  nodes.py
graph/chains/: answer_grader.py  hallucination_grader.py  retrieval.py  retrieval_grader.py  router.py
graph/nodes/: retrieve.py
graph/topics/aduanas/: graph.py  nodes.py
graph/topics/cambiario/: graph.py  nodes.py
graph/topics/ipoconsumo/: graph.py  nodes.py
graph/topics/iva/: __init__.py  graph.py  nodes.py
graph/topics/retencion/: graph.py  nodes.py
graph/topics/timbre/: graph.py  nodes.py
pages/: 2_Renta.py  3_Timbre.py  4_Retencion.py  5_IVA.py  6_Impuesto_al_Consumo.py  7_Aduanas.py  8_Cambiario.py
