[tool.poetry]
name = "tributario-api"
version = "0.1.0"
description = "API de consultoría tributaria con LangGraph"
authors = ["Hernando Castro Arana <hcastro@esguerrajhr.com>"]
readme = "README.md"
packages = [
    {include = "graph"},
    {include = "*.py"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "0.3.21"
langchain-core = "0.3.46"
langchain-community = "0.3.20"
langchain-openai = "0.3.9"
langgraph = "0.3.18"
langgraph-api = "0.0.31"
langgraph-checkpoint = "2.0.21"
langgraph-cli = "0.1.77"
langgraph-prebuilt = "0.1.3"
langgraph-sdk = "0.1.58"
pinecone = "6.0.2"
openai = "1.67.0"
tiktoken = "0.9.0"
python-dotenv = "1.0.1"
anthropic = "0.49.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 